Adopt more modern Java syntax.